Fix map being visible

--- a/styles.css
+++ b/styles.css
@@ -150,6 +150,8 @@ a.article:hover {
 
 #content {
     width: 100%;
+    height:100%;
+    padding: 20px;
     min-height: 100vh;
     transition: all 0.3s;
     position: absolute;
@@ -185,7 +187,6 @@ a.article:hover {
 	clear: both;
 	line-height: 1.428571429;
 	color: #333;
-}
 	white-space: normal;
 }
 
@@ -193,6 +194,7 @@ a.article:hover {
 	text-decoration: none;
 	color: #262626;
 	background-color: #999;
+}
 
 @media (max-width: 767px) {
 	.dropdown-menu.multi-column {
@@ -206,56 +208,6 @@ a.article:hover {
 ----------------------------------------------------- */
 
 #mapid {
-    height: 100vh;
-    z-index: 998; /* 1 behind the navbar */
-}
-
-/* ---------------------------------------------------
-    DATETIME PICKER STYLE
------------------------------------------------------ */
-
-.apply {
-    background: #8d2663;
-    color: #fff;
-}
-.cancel {
-    background: #ababab;
-}
-/* Custom, iPhone Retina */
-@media only screen and (min-width : 320px) {
-    .timecontrol {
-        width: 275px;
-    }
-}
-/* Extra Small Devices, Phones */
-@media only screen and (min-width : 480px) {
-    .timecontrol {
-        width: 375px;
-    }
-}
-
-/* Small Devices, Tablets */
-@media only screen and (min-width : 768px) {
-    .timecontrol {
-        width: 500px;
-    }
-}
-
-/* Medium Devices, Desktops */
-@media only screen and (min-width : 992px) {
-    .timecontrol {
-        width: 500px;
-    }
-}
-
-/* Large Devices, Wide Screens */
-@media only screen and (min-width : 1200px) {
-    .timecontrol {
-        width: 500px;
-    }
-}
-
-#timepicker {
-    width: 100%;
-    text-align: right;
+  height: 100%;
+  width: 100%;
 }
